--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -1,5 +1,12 @@
-.container
-  max-width: 720px
-  margin: 0 auto
-  border-radius: 10px
-  background-color: white
+*
+  margin: 0
+  padding: 0
+  box-sizing: border-box
+
+body
+  font-family: "Open Sans"
+
+  .container
+    width: 780px
+    margin: 0 auto
+    padding: 30px 30px 0
