--- a/src/components/NOCMedals/NOCMedals.sass
+++ b/src/components/NOCMedals/NOCMedals.sass
@@ -1,5 +1,41 @@
+@import ../../sass/init
+
 .NOCMedals
-  width: 80%
-  height: 100px
-  margin: 0 auto
-  background-color: white
+  display: flex
+  flex-direction: column
+  align-items: center
+  margin: 0 auto 60px
+  padding: 30px 0
+  border: 1px solid rgb(233, 233, 233)
+  border-radius: 15px
+  background-color: rgb(245, 245, 245)
+
+  .country
+    margin-bottom: 30px
+    font-size: 48px
+    font-weight: 600
+
+  .medals
+    display: flex
+    justify-content: space-between
+    width: 240px
+
+    .Medal
+      display: flex
+      flex-direction: column
+      align-items: center
+      font-size: 48px
+
+      .icon
+
+        &.gold
+          color: $color-gold
+
+        &.silver
+          color: $color-silver
+
+        &.bronze
+          color: $color-bronze
+
+      .counter
+        font-size: 32px
