--- a/src/components/Participant/Participant.sass
+++ b/src/components/Participant/Participant.sass
@@ -1,4 +1,4 @@
-@import ../../../../sass/init
+@import ../../sass/init
 
 .Participant
   display: flex
@@ -13,26 +13,22 @@
     width: 80px
     height: 100%
 
-    svg
+    .fa-medal
       font-size: 1.5em
 
-    .gold
-      color: $color-gold
+      &.gold
+        color: $color-gold
 
-    .silver
-      color: $color-silver
+      &.silver
+        color: $color-silver
 
-    .bronze
-      color: $color-bronze
+      &.bronze
+        color: $color-bronze
 
   .participant
     width: 50%
-    color: black
+    color: $color-blue
     font-weight: 600
-    line-height: 1.5
 
   .event
-    width: 300px
     color: rgb(100, 100, 100)
-
-
